<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:orientation="vertical"
    tools:context="com.example.admin.email.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_name"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_email"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_email"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_subject"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_subject"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/your_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="130dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

        <Button
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#53bbb4"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp"
            android:text="@string/contact_form_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

</RelativeLayout>
